--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TSNFT",
-  "name": "The Stripes NFT",
+  "short_name": "MegaK1",
+  "name": "Mega Kurs 1.0",
   "icons": [
     {
       "src": "favicon.ico",
