--- a/public/config/config.json
+++ b/public/config/config.json
@@ -6,9 +6,9 @@
     "SYMBOL": "ETH",
     "ID": 1
   },
-  "NFT_NAME": "Mega Kurs Monsters",
-  "SYMBOL": "MKM",
-  "MAX_SUPPLY": 300,
+  "NFT_NAME": "EireHarvest",
+  "SYMBOL": "EHH",
+  "MAX_SUPPLY": 413,
   "WEI_COST": 505000,
   "DISPLAY_COST": 0.005,
   "GAS_LIMIT": 505000,
