--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MKM",
-  "name": "Mega Kurs Monsters",
+  "short_name": "EHH",
+  "name": "EireHarvest",
   "icons": [
     {
       "src": "favicon.ico",
