--- a/public/config/config.json
+++ b/public/config/config.json
@@ -2,8 +2,8 @@
   "CONTRACT_ADDRESS": "0x18D1C935730Ac9C8194860737E3F376ED6a07C4C",
   "SCAN_LINK": "https://etherscan.io/token/0x18d1c935730ac9c8194860737e3f376ed6a07c4c",
   "NETWORK": {
-    "NAME": "Ethereum",
-    "SYMBOL": "ETH",
+    "NAME": "Polygon",
+    "SYMBOL": "Matic",
     "ID": 1
   },
   "NFT_NAME": "EireHarvest",
