--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,6 +1,6 @@
 {
-  "CONTRACT_ADDRESS": "0x18D1C935730Ac9C8194860737E3F376ED6a07C4C",
-  "SCAN_LINK": "https://etherscan.io/token/0x18d1c935730ac9c8194860737e3f376ed6a07c4c",
+  "CONTRACT_ADDRESS": "0xb1e67Fb54b5C516C3dB6BB53d8DBBc53B8384f69",
+  "SCAN_LINK": "https://sepolia.etherscan.io/token/0xb1e67fb54b5c516c3db6bb53d8dbbc53b8384f69",
   "NETWORK": {
     "NAME": "Ethereum",
     "SYMBOL": "ETH",
@@ -8,7 +8,7 @@
   },
   "NFT_NAME": "EireHarvest",
   "SYMBOL": "EHH",
-  "MAX_SUPPLY": 413,
+  "MAX_SUPPLY": 33,
   "WEI_COST": 505000,
   "DISPLAY_COST": 0.005,
   "GAS_LIMIT": 505000,
