--- a/public/config/config.json
+++ b/public/config/config.json
@@ -2,9 +2,9 @@
   "CONTRACT_ADDRESS": "0xb1e67Fb54b5C516C3dB6BB53d8DBBc53B8384f69",
   "SCAN_LINK": "https://sepolia.etherscan.io/token/0xb1e67fb54b5c516c3db6bb53d8dbbc53b8384f69",
   "NETWORK": {
-    "NAME": "Ethereum",
+    "NAME": "Sepolia test network",
     "SYMBOL": "ETH",
-    "ID": 1
+    "ID": 11155111
   },
   "NFT_NAME": "EireHarvest",
   "SYMBOL": "EHH",
