--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,6 +1,6 @@
 {
-  "CONTRACT_ADDRESS": "0xd9145CCE52D386f254917e481eB44e9943F39138",
-  "SCAN_LINK": "https://polygonscan.com/token/0xd9145CCE52D386f254917e481eB44e9943F39138",
+  "CONTRACT_ADDRESS": "0x9C865B325E3F857020FDc24182a01831D0Ea79e4",
+  "SCAN_LINK": "https://sepolia.etherscan.io/address/0x9c865b325e3f857020fdc24182a01831d0ea79e4",
   "NETWORK": {
     "NAME": "Ethereum",
     "SYMBOL": "ETH",
