--- a/public/config/config.json
+++ b/public/config/config.json
@@ -2,9 +2,9 @@
   "CONTRACT_ADDRESS": "0x9C865B325E3F857020FDc24182a01831D0Ea79e4",
   "SCAN_LINK": "https://sepolia.etherscan.io/address/0x9c865b325e3f857020fdc24182a01831d0ea79e4",
   "NETWORK": {
-    "NAME": "Ethereum",
-    "SYMBOL": "ETH",
-    "ID": 1
+    "NAME": "Sepolia test network",
+    "SYMBOL": "SepoliaETH",
+    "ID": 11155111
   },
   "NFT_NAME": "Eire Harvest",
   "SYMBOL": "EHH",
