--- a/public/config/config.json
+++ b/public/config/config.json
@@ -11,7 +11,7 @@
   "MAX_SUPPLY": 431,
   "WEI_COST": 40000000000000000,
   "DISPLAY_COST": 0.04,
-  "GAS_LIMIT": 285000,
+  "GAS_LIMIT": 28500000,
   "MARKETPLACE": "Opeansea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/mega-kurs-nft",
   "SHOW_BACKGROUND": true
