--- a/public/config/config.json
+++ b/public/config/config.json
@@ -12,7 +12,7 @@
   "WEI_COST": 40000000000000000,
   "DISPLAY_COST": 0.04,
   "GAS_LIMIT": 28500000,
-  "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/mega-kurs-nft",
+  "MARKETPLACE": "Omnisea",
+  "MARKETPLACE_LINK": "https://omnisea.org/hqJXPqnPjdl9R2PBef1V",
   "SHOW_BACKGROUND": true
 }
