--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,6 +1,6 @@
 {
-  "CONTRACT_ADDRESS": "0xE1AbE724C658E46613d5f5C9fD907E9A135704E1",
-  "SCAN_LINK": "https://sepolia.etherscan.io/address/0xE1AbE724C658E46613d5f5C9fD907E9A135704E1",
+  "CONTRACT_ADDRESS": "0x3BAEc5477b5C989c2b01A0bf3c6071391B715ED2",
+  "SCAN_LINK": "https://explorer.zksync.io/address/0x3BAEc5477b5C989c2b01A0bf3c6071391B715ED2#contract",
   "NETWORK": {
     "NAME": "zkSync",
     "SYMBOL": "ETH",
@@ -9,8 +9,8 @@
   "NFT_NAME": "Eire Harvest",
   "SYMBOL": "EHH",
   "MAX_SUPPLY": 431,
-  "WEI_COST": 40000000000000000,
-  "DISPLAY_COST": 0.04,
+  "WEI_COST": 100000000000000,
+  "DISPLAY_COST": 0.0001,
   "GAS_LIMIT": 28500000,
   "MARKETPLACE": "Omnisea",
   "MARKETPLACE_LINK": "https://omnisea.org/hqJXPqnPjdl9R2PBef1V",
