--- a/public/config/config.json
+++ b/public/config/config.json
@@ -2,9 +2,9 @@
   "CONTRACT_ADDRESS": "0x3BAEc5477b5C989c2b01A0bf3c6071391B715ED2",
   "SCAN_LINK": "https://explorer.zksync.io/address/0x3BAEc5477b5C989c2b01A0bf3c6071391B715ED2#contract",
   "NETWORK": {
-    "NAME": "zkSync Mainnet",
+    "NAME": "Ethereum",
     "SYMBOL": "ETH",
-    "ID": 324
+    "ID": 1
   },
   "NFT_NAME": "Eire Harvest",
   "SYMBOL": "EHH",
@@ -12,7 +12,7 @@
   "WEI_COST": 100000000000000,
   "DISPLAY_COST": 0.0001,
   "GAS_LIMIT": 28500000,
-  "MARKETPLACE": "Omnisea",
+  "MARKETPLACE": "eIRE Zk",
   "MARKETPLACE_LINK": "https://omnisea.org/hqJXPqnPjdl9R2PBef1V",
   "SHOW_BACKGROUND": true
 }
