--- a/public/config/config.json
+++ b/public/config/config.json
@@ -12,7 +12,7 @@
   "WEI_COST": 100000000000000,
   "DISPLAY_COST": 0.0001,
   "GAS_LIMIT": 28500000,
-  "MARKETPLACE": "eIRE Zk",
-  "MARKETPLACE_LINK": "https://omnisea.org/hqJXPqnPjdl9R2PBef1V",
+  "MARKETPLACE": "Mint on Linea",
+  "MARKETPLACE_LINK": "https://omnisea.org/jUovwshMe7b6YODPwhft",
   "SHOW_BACKGROUND": true
 }
